--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Byte-compiled / optimized / DLL files
 __pycache__
+build
+dist
 *.py[cod]
 *$py.class
 
 # 参考资料
-
+*.spec
 .venv
 .vscode
 .idea
